// MIT License
//
// Copyright (c) 2025 Eigen
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in all
// copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
// SOFTWARE.

syntax = "proto3";

package oppb.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/Eigen438/opgo/pkg/auto-generated/oppb/v1;oppb";

message AuthorizationParameters {
  // https://openid.net/specs/openid-connect-core-1_0.html#AuthRequest
  repeated string scopes = 1 [json_name = "scopes"];
  string response_type = 2 [json_name = "response_type"];
  string client_id = 3 [json_name = "client_id"];
  string redirect_uri = 4 [json_name = "redirect_uri"];
  string state = 5 [json_name = "state"];
  string response_mode = 6 [json_name = "response_mode"];
  string nonce = 7 [json_name = "nonce"];
  string display = 8 [json_name = "display"];
  repeated string prompts = 9 [json_name = "prompts"];
  string max_age = 10 [json_name = "max_age"];
  repeated string ui_locales = 11 [json_name = "ui_locales"];
  string id_token_hint = 12 [json_name = "id_token_hint"];
  string login_hint = 13 [json_name = "login_hint"];
  repeated string acr_values = 14 [json_name = "acr_values"];
  // https://openid.net/specs/openid-connect-core-1_0.html#ClaimsLanguagesAndScripts
  string claims_locales = 15 [json_name = "claims_locales"];
  // https://openid.net/specs/openid-connect-core-1_0.html#ClaimsParameter
  string claims = 16 [json_name = "claims"];
  // https://www.rfc-editor.org/rfc/rfc7521.html#section-4.2
  string client_assertion_type = 17 [json_name = "client_assertion_type"];
  string client_assertion = 18 [json_name = "client_assertion"];
  // https://datatracker.ietf.org/doc/html/rfc7636#section-4.3
  string code_challenge = 19 [json_name = "code_challenge"];
  string code_challenge_method = 20 [json_name = "code_challenge_method"];
  // https://openid.net/specs/openid-connect-core-1_0.html#JWTRequests
  string request = 21 [json_name = "request"];
  string request_uri = 22 [json_name = "request_uri"];
}

message PushedAuthorizationAttribute {
  google.protobuf.Timestamp expire_at = 1;
}
